# myfirstrocketapp

./: .gitignore  Cargo.toml  README.md  Rocket.toml.template
src/: connection_init.rs  experiments.rs  foo.rs  foo_controller.rs  guid.rs  main.rs  result.rs
src/api/: foo.rs  foo_controller.rs  mod.rs
src/api/foo/: actions.rs  mod.rs  requests.rs  responses.rs
src/api/root/: actions.rs  mod.rs
src/app/: foo.rs
src/controllers/: foo_controller.rs  mod.rs  root_controller.rs
src/db/: connection.rs  foo.rs  migrations.rs  mod.rs
src/object_model/: foo.rs  mod.rs
