[package]
name = "myfirstrocketapp"
version = "0.1.0"
authors = ["Richard Cook"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "3.0.1"
rocket = "0.4.7"
rocket_contrib = "0.4.7"
rusqlite = { version = "0.24.2", features = ["array", "bundled"] }
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
