[package]
name = "myfirstrocketapp"
version = "0.1.0"
authors = ["Richard Cook"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "3.0.1"
rocket = { git = "https://github.com/SergioBenitez/Rocket.git", rev = "e7934a2a3fc23e78be3f93f16096c892ad24481d" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket.git", rev = "e7934a2a3fc23e78be3f93f16096c892ad24481d" }
rusqlite = { version = "0.23.0", features = ["array", "bundled"] }
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
uuid = { version = "0.8.2", features = ["v4"] }
